--- a/docroot/views/view.xhtml
+++ b/docroot/views/view.xhtml
@@ -54,10 +54,9 @@
 							<h:panelGroup layout="block">
 								<h:panelGroup styleClass="ui-layout-unit-header ui-widget-header ui-corner-all">Analyze Instructions</h:panelGroup>
 								<OL>
-									<LI>Terse instruction text goes here.</LI>
-									<LI>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </LI>
-									<LI>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</LI>
-									<LI>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</LI>
+									<LI>Drag files or folders to the right.</LI>
+									<LI>Select algorithms from the list below</LI>
+									<LI>Click the "Start Analysis" button under the list on top right.</LI>
 								</OL>
 							</h:panelGroup>
 							
