Combined Algorithm.sAnalysisServiceURL and Algorithm.Url variables into Algorithm.sAnalysisServiceURL.

--- a/docroot/views/edit.xhtml
+++ b/docroot/views/edit.xhtml
@@ -41,7 +41,7 @@
  							<p:column headerText="Service" width="15%">
 								<h:outputLabel 
 									value="#{algorithm.displayServiceName}"  
-									title="#{algorithm.url}/#{algorithm.serviceName}/#{algorithm.serviceMethod}" />
+									title="#{algorithm.AnalysisServiceURL}/#{algorithm.serviceName}/#{algorithm.serviceMethod}" />
 							</p:column>
 		
  							<p:column headerText="ID" width="5%">
@@ -53,7 +53,7 @@
 							<p:column headerText="Name" width="15%">
 								<h:outputLabel 
 									value="#{algorithm.displayShortName}"  
-									title="#{algorithm.url}/#{algorithm.serviceName}/#{algorithm.serviceMethod}"/>
+									title="#{algorithm.AnalysisServiceURL}/#{algorithm.serviceName}/#{algorithm.serviceMethod}"/>
 							</p:column>
 		
 							<p:column headerText="Description" swidth="60%">
