--- a/docroot/views/view.xhtml
+++ b/docroot/views/view.xhtml
@@ -103,7 +103,7 @@
 							<p:commandButton value="Start Analysis" 
 								icon="ui-icon-play"
 								action="#{analyzeBacking.startAnalysis}"
-							/> <!-- onclick="cancel();start()" -->
+								onclick="cancel();start()" /> 
 						</div>
 						
 							
@@ -122,7 +122,8 @@
 							<p:column selectionMode="multiple" style="width:2%"/>
 							
 							<p:column headerText="Name" style="width:20%">  
-		          				<h:outputLabel value="#{algorithm.displayShortName}"/> 
+		          				<h:outputLabel value="#{algorithm.displayShortName}"
+		          					title="Provided by: #{algorithm.displayServiceName}"/> 
 		      				</p:column> 
 								
 							<p:column headerText="Help" style="width:5%">  
